# RAG-Local

./: .gitignore  ARCHITECTURE.md  LEARN.md  QUICKSTART.md  README.md  UV_BENEFITS.md  pyproject.toml  rag_example.ipynb  run_cli.ps1  run_rag_example.ps1  run_with_uv.ps1  setup_env.ps1  setup_uv.ps1  setup_uv.sh
documents/: info.txt
python_example/: .gitignore  ARCHITECTURE.md  CROSS_PLATFORM_README.md  LOCAL_RAG_SETUP.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  env.example  pyproject.toml  quickstart.py  rag_example.ipynb  requirements.txt
python_example/config/: local_rag_config.yaml  settings.py
python_example/docs/: learn.md
python_example/scripts/: README.md
python_example/scripts/unix/: README.md  install_ollama_unix.sh  make_executable.sh  run_ollama_direct.sh  setup_complete.sh  setup_ollama_models.sh
python_example/scripts/windows/: README.md  install_ollama_windows.ps1  run.ps1  run_ollama_direct.bat  setup_complete.ps1  setup_local.ps1  setup_ollama_models.ps1  setup_uv.ps1
python_example/src/: __init__.py  chunking.py  cli.py  embeddings_local.py  example_usage.py  llm_local.py  main.py  rag_pipeline_local.py  vector_store_lancedb.py
python_example/tests/: README.md  __init__.py  run_all_tests.py  test_local_rag.py  test_main.py  test_results.json
src/: chunking.py  cli.py  config.py  embeddings.py  example_usage.py  rag_pipeline.py  vector_store.py
typescript_example/: .eslintrc.js  .eslintrc.json  README.md  env.example  package.json  tsconfig.json
typescript_example/docs/: architecture.md  cross-platform.md  learn.md  setup.md
typescript_example/src/: chunker.ts  example.ts  index.ts  ollama-client.ts  rag-pipeline.ts  test.ts  vector-store.ts
